# fit-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
examples/: dog.rs  macro_enums.rs  macro_string_value.rs  merge_fit.rs  read_fit.rs  write_fit.rs
src/: lib.rs  main.rs
src/log/: mod.rs
src/protocol/: consts.rs  data_field.rs  field_type_enum.rs  get_field_offset.rs  get_field_scale.rs  get_field_string_value.rs  get_field_type.rs  io.rs  macros.rs  message_type.rs  mod.rs  value.rs
