[package]
name = "fit-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copyless = "0.1.5"
binrw = { version = "0.13.0" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
time = { version = "0.3.28", features = ["macros"] }